# Group1-6DOF_social_robot

./: README.md
social_arm/Social-Robot-Arm/Social-Robot-Arm/: CMakeLists.txt  package.xml
social_arm/Social-Robot-Arm/social_robot_arm_control_gui/: CMakeLists.txt  package.xml
social_arm/Social-Robot-Arm/social_robot_arm_control_gui/config/: init_pose.yaml  zero_pose.yaml
social_arm/Social-Robot-Arm/social_robot_arm_control_gui/include/social_robot_arm_control_gui/: main_window.hpp  qnode.hpp
social_arm/Social-Robot-Arm/social_robot_arm_control_gui/launch/: social_robot_arm_control_gui.launch
social_arm/Social-Robot-Arm/social_robot_arm_control_gui/motion/: motion.yaml
social_arm/Social-Robot-Arm/social_robot_arm_control_gui/src/: main.cpp  main_window.cpp  qnode.cpp
social_arm/Social-Robot-Arm/social_robot_arm_control_gui/ui/: main_window.ui
social_arm/Social-Robot-Arm/social_robot_arm_controller/include/social_robot_arm_controller/: social_robot_arm_controller.h
social_arm/Social-Robot-Arm/social_robot_arm_controller/launch/: social_robot_arm_controller.launch  social_robot_arm_moveit.launch
social_arm/Social-Robot-Arm/social_robot_arm_controller/src/: social_robot_arm_controller.cpp
social_arm/Social-Robot-Arm/social_robot_arm_libs/: CMakeLists.txt  package.xml
social_arm/Social-Robot-Arm/social_robot_arm_libs/include/social_robot_arm_libs/: custom_trajectory.h  dynamics.h  dynamixel.h  kinematics.h  social_robot_arm.h
social_arm/Social-Robot-Arm/social_robot_arm_libs/src/: custom_trajectory.cpp  dynamics.cpp  dynamixel.cpp  kinematics.cpp  social_robot_arm.cpp
social_arm/Social-Robot-Arm/social_robot_arm_moveit/: .setup_assistant
social_arm/Social-Robot-Arm/social_robot_arm_moveit/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  social_robot.srdf
social_arm/Social-Robot-Arm/social_robot_arm_moveit/launch/: chomp_planning_pipeline.launch.xml  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch
social_arm/Social-Robot-Arm/social_robot_arm_msgs/: CMakeLists.txt  package.xml
social_arm/Social-Robot-Arm/social_robot_arm_msgs/msg/: ManipulatorState.msg  MotionControl.msg  MotionSave.msg  SetMode.msg
social_arm/Social-Robot-Arm/social_robot_arm_msgs/srv/: SetActuatorState.srv  SetDrawingTrajectory.srv
social_arm/Social-Robot-Arm/social_robot_description/: CMakeLists.txt  package.xml
social_arm/Social-Robot-Arm/social_robot_description/launch/: social_robot_calibration_rviz.launch  social_robot_rviz.launch
social_arm/Social-Robot-Arm/social_robot_description/meshes/calibration/: Head_Yaw.stl  base_link.stl  l_base.stl  marker.stl  neck.stl  neck_nocam.stl
social_arm/Social-Robot-Arm/social_robot_description/rviz/: social_robot.rviz  social_robot_calibration.rviz
social_arm/Social-Robot-Arm/social_robot_description/urdf/: social_robot.gazebo.xacro  social_robot.structure.head.xacro  social_robot.structure.larm.xacro  social_robot.structure.lhand.xacro  social_robot.structure.rarm.xacro  social_robot.structure.rhand.xacro  social_robot.urdf.xacro  social_robot_calibration.urdf.xacro
social_arm/Social-Robot-Arm/social_robot_gazebo/: CMakeLists.txt  package.xml
social_arm/Social-Robot-Arm/social_robot_gazebo/config/: gazebo_controller.yaml  position_controller.yaml
social_arm/Social-Robot-Arm/social_robot_gazebo/launch/: position_controller.launch  social_robot_gazebo.launch
social_bringup/launch/: social_bringup.launch
social_motion/social_motion_maker/src/social_motion_maker/: social_arm_torque_release.py
social_motion/social_motion_res/joint/: test.joint
social_nav/robocare_nav/pcm_ws/pcl_tools/: CMakeLists.txt  package.xml
social_nav/robocare_nav/pcm_ws/pcl_tools/include/: pcl_tools.h
social_nav/robocare_nav/pcm_ws/pcl_tools/src/: pcl_tools.cpp
social_nav/robocare_nav/pcm_ws/pcm_msgs/: CMakeLists.txt  package.xml
social_nav/robocare_nav/pcm_ws/pcm_msgs/msg/: Plane.msg  PlaneMultiArray.msg  Vector.msg
social_nav/robocare_nav/pcm_ws/pcm_msgs/srv/: PcmLocalization.srv  RegisterInMap.srv
social_nav/robocare_nav/pcm_ws/plane_extractor/: CMakeLists.txt  package.xml
social_nav/robocare_nav/pcm_ws/plane_extractor/include/: plane_extractor.h
social_nav/robocare_nav/pcm_ws/plane_extractor/launch/: plane_extractor.launch
social_nav/robocare_nav/pcm_ws/plane_extractor/src/: plane_extractor.cpp
social_nav/robocare_nav/robocare_navigation/launch/: robocare_navigation.launch
social_nav/robocare_nav/robocare_navigation/maps/: map.pgm  map_test.yaml
social_nav/robocare_nav/robocare_navigation/param/cost_map/: costmap_global_common_params.yaml  costmap_local_common_params.yaml
social_nav/robocare_nav/robocare_navigation/param/move_base/: move_base_params.yaml
social_nav/robocare_nav/robocare_navigation/param/planner/: dwa_local_planner_params.yaml
social_nav/robocare_nav/robocare_navigation/src/: scan_fusion.cpp
social_nav/rplidar_ros/launch/: double_lidar.launch  rplidar.launch
social_nav/social_recharge/src/: social_recharge.cpp  social_test.cpp
